# ghibli_films

./: README.md
ghibli_films_project/ghibli_films/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ghibli_films_project/ghibli_films/_build/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ghibli_films_project/ghibli_films/_build/.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
ghibli_films_project/ghibli_films/_build/.doctrees/autoapi/: index.doctree
ghibli_films_project/ghibli_films/_build/.doctrees/autoapi/ghibli_films/: index.doctree
ghibli_films_project/ghibli_films/_build/.doctrees/autoapi/ghibli_films/ghibli_films/: index.doctree
ghibli_films_project/ghibli_films/_build/_sources/autoapi/: index.rst.txt
ghibli_films_project/ghibli_films/_build/_sources/autoapi/ghibli_films/: index.rst.txt
ghibli_films_project/ghibli_films/_build/autoapi/: index.html
ghibli_films_project/ghibli_films/_build/autoapi/ghibli_films/: index.html
ghibli_films_project/ghibli_films/_build/autoapi/ghibli_films/ghibli_films/: index.html
ghibli_films_project/ghibli_films/docs/: Makefile  conf.py  example.ipynb  make.bat
ghibli_films_project/ghibli_films/jupyter_execute/: example.ipynb  example.py
ghibli_films_project/ghibli_films/src/ghibli_films/: __init__.py  ghibli_films.py
ghibli_films_project/ghibli_films/tests/: test_ghibli_films.py
(+6 files in other folders)
