[tool.poetry]
name = "ghibli_films"
version = "0.1.0"
description = "Python package that provides information on Studio Ghibli films."
authors = ["Sali Mahdy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
